--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "uploadthing": "^6.13.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
