--- a/.env
+++ b/.env
@@ -12,9 +12,9 @@ ADMIN_EMAIL = 'vnetc89@gmail.com'
 PASSWORD_ADMIN_EMAIL = 'aroc vfjg oetr sdaf'
 
 //cloundinary
-CLOUDINARY_CLOUD_NAME = 'ddmzboxzu'
-CLOUDINARY_API_KEY = '475999854119447'
-CLOUDINARY_SECRET_KEY = 'MsSuKZVuo-WtP0_VtVOi06hn088'
+CLOUDINARY_CLOUD_NAME = 'dcmsqqvcz'
+CLOUDINARY_API_KEY = '754846651253139'
+CLOUDINARY_SECRET_KEY = 'TMWt7_LYPMqhm2KKpAEjr2b'
 
 //Jwt
 ACCESS_TOKEN_SECRET = 'mothaiba'
