--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build-babel": "babel ./src -d ./build/src",
     "build": "npm run clean && npm run build-babel",
     "production": "npm run build && node ./build/src/server.js",
-    "dev": "nodemon --exec babel-node ./src/server.js",
-    "start": "nodemon --exec babel-node ./src/server.js"
+    "dev": "nodemon --exec babel-node src/server.js",
+    "start": "nodemon --exec babel-node src/server.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.22.10",
