--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ PASSWORD_ADMIN_EMAIL = 'aroc vfjg oetr sdaf'
 //cloundinary
 CLOUDINARY_CLOUD_NAME = 'dcmsqqvcz'
 CLOUDINARY_API_KEY = '754846651253139'
-CLOUDINARY_SECRET_KEY = 'TMWt7_LYPMqhm2KKpAEjr2b'
+CLOUDINARY_SECRET_KEY = 'TMWt7_LYPMqhm2KKpAEjr2b-vpI'
 
 //Jwt
 ACCESS_TOKEN_SECRET = 'mothaiba'
